force-app/main/default/objects/ProjectTypeCustomSettings__c/ProjectTypeCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Project Type Configuration Settings</description>
    <label>ProjectTypeCustomSettings</label>
</CustomObject>