force-app/main/default/objects/ProjectTypeCustomSettings__c/fields/FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetName__c</fullName>
    <label>Field Set Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>