force-app/main/default/objects/ProjectTypeCustomSettings__c/fields/ProjectCompletionStrategyClass__c.field-meta.xml
<CustomField>
    <fullName>ProjectCompletionStrategyClass__c</fullName>
    <label>Project Completion Strategy Class</label>
    <length>140</length>
    <type>Text</type>
</CustomField>