force-app/main/default/objects/ProjectTypeCustomSettings__c/fields/ReReserveTrackFieldList__c.field-meta.xml
<CustomField>
    <fullName>ReReserveTrackFieldList__c</fullName>
    <label>ReReserveTrackFieldList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>