force-app/main/default/objects/ProjectTypeCustomSettings__c/fields/SchedulingStrategyClass__c.field-meta.xml
<CustomField>
    <fullName>SchedulingStrategyClass__c</fullName>
    <label>Scheduling Strategy Class</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>